--- a/templates/url_list.html
+++ b/templates/url_list.html
@@ -59,6 +59,12 @@
     </div>
   </div>
 </div>
+<div id="vue_div">
+  <span>Hello Times: [[ howManyTimes ]]</span>
+  <a class="btn btn-sm btn-primary text-white" @click="howManyTimes +=1">Say hello</a>
+  <a class="btn btn-sm btn-primary text-white" @click="howManyTimes -=1">Say Bye</a>
+  <a class="btn btn-sm btn-primary text-white" @click="howManyTimes = 0">Reset Hello</a>
+</div>
 {% if messages %}
     {% for message in messages %}
     <div aria-live="polite" aria-atomic="true" style="position: relative; min-height: 200px;">
@@ -80,4 +86,15 @@
       $('.toast').toast('show');
     </script>
 {% endif %}
+
+<script>
+  let vue = new Vue({
+    delimiters: ['[[', ']]'],
+    el: "#vue_div",
+    data: {
+      howManyTimes: 0
+    }
+  })
+  </script>
+
 {% endblock %}
