--- a/templates/url_list.html
+++ b/templates/url_list.html
@@ -6,7 +6,7 @@
 {% block sub_breadscumb %}URL 리스트{% endblock %}
 {% block content %}
 
-<div class="row">
+<div class="row" id="vue_div">
   <div class="col-xl-12">
     <div class="card">
       <div class="card-header border-0">
@@ -24,77 +24,84 @@
               <th scope="col">단축 URL</th>
               <th scope="col">생성채널</th>
               <th scope="col">생성일</th>
+              <th scope="col">클릭수</th>
               <th scope="col">액션</th>
             </tr>
           </thead>
           <tbody>
-          {% for l in list%}
-            <tr>
-              <th scope="row">{{ l.nick_name }}</th>
+            <tr v-for="l in urlLists">
+              <th scope="row">[[ l.nick_name ]]</th>
 
-              <td>{{ l.target_url }}</td>
+              <td>[[ l.target_url ]] </td>
               <td>
-                <a href="/{{ l.prefix }}/{{ l.shortened_url }}" target="_blank">
-                  {{ request.get_host }}/{{ l.prefix }}/{{ l.shortened_url }}
+                <a :href="'/'+l.prefix+'/'+l.shortened_url" target="_blank">
+                  [[ l.prefix | addressAssembler(l.shortened_url)]]
                 </a>
               </td>
-              <td>{{ l.create_via }}</td>
-              <td>{{ l.created_at }}</td>
+              <td>[[ l.create_via ]]</td>
+              <td>[[ l.created_at ]]</td>
               <td>
-                <form action="/urls/delete/{{ l.id }}" method="POST">
-                {% csrf_token %}
-                  <a href="/urls/update/{{ l.id }}" class="btn btn-sm btn-primary">
+                [[ l.click ]] 
+                <i class="ni ni-chart-bar-32 ml-2" style="cursor: pointer;"></i>
+              </td>
+              <td>
+                  <button  class="btn btn-sm btn-primary">
                     수정
-                  </a>
-                  <button type="submit" class="btn btn-sm btn-danger" onclick="return confirm('정말 삭제 하시겠습니까?');">
+                  </button>
+                  <button @click="deleteUrl(l.id)" class="btn btn-sm btn-danger">
                     삭제
                   </button>
-                </form>
               </td>
             </tr>
-          {% endfor %}
           </tbody>
         </table>
       </div>
     </div>
   </div>
 </div>
-<div id="vue_div">
-  <span>Hello Times: [[ howManyTimes ]]</span>
-  <a class="btn btn-sm btn-primary text-white" @click="howManyTimes +=1">Say hello</a>
-  <a class="btn btn-sm btn-primary text-white" @click="howManyTimes -=1">Say Bye</a>
-  <a class="btn btn-sm btn-primary text-white" @click="howManyTimes = 0">Reset Hello</a>
-</div>
-{% if messages %}
-    {% for message in messages %}
-    <div aria-live="polite" aria-atomic="true" style="position: relative; min-height: 200px;">
-      <div class="toast" style="position: absolute; top: 0; right: 0;"  data-delay="5000">
-        <div class="toast-header">
-          <strong class="mr-auto">알림</strong>
-          <small>방금 전</small>
-          <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="toast-body">
-          {{message}}
-        </div>
-      </div>
-    </div>
-    {% endfor %}
-    <script>
-      $('.toast').toast('show');
-    </script>
-{% endif %}
 
 <script>
-  let vue = new Vue({
+let vm = new Vue({
     delimiters: ['[[', ']]'],
-    el: "#vue_div",
+    el: '#vue_div',
     data: {
-      howManyTimes: 0
+      newUrlName: null,
+      newUrlTarget: null,
+      urlLists: []
+    },
+    mounted() {
+      this.getList();
+    },
+    methods: {
+      getList: function () {
+        $("#vue_div").LoadingOverlay("show");
+        axios.get(`/api/urls/`,
+        ).then(function (response) {
+            vm.urlLists = response.data
+        }).catch(function (e) {
+        }).finally(function () {
+          $("#vue_div").LoadingOverlay("hide");
+        });
+      },
+      deleteUrl: function (urlId) {
+        const c = confirm('정말 삭제 하시겠습니까?');
+        if (!c) return;
+        axios.delete(`/api/urls/${urlId}`, {headers: {'X-CSRFToken': Cookies.get('csrftoken')}}
+        ).then(function (response) {
+        }).catch(function (e) {
+        }).finally(function () {
+          vm.getList();
+        });
+      }
+    },
+    filters: {
+      addressAssembler: function(v, arg) {
+        const url = new URL(document.URL);
+        const host = url.host;
+        return `${host}/${v}/${arg}`
+     }
     }
-  })
-  </script>
-
+})
+</script>
 {% endblock %}
+
